# faker_etl

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: extract.py  load.py  main.py
src/cronjobs/: faker-etl-cj.yaml
src/jobs/: data_split.py  delete_old_data.py
